fixed spacing issues

--- a/src/Landing.css
+++ b/src/Landing.css
@@ -50,3 +50,9 @@ p {
     color: black;
 }
 
+.title-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
